--- a/src/views/User/user.css
+++ b/src/views/User/user.css
@@ -19,3 +19,30 @@
   position: fixed;
   bottom: 8px;
   right: 8px; }
+
+.wrapper {
+  position: relative; }
+
+.cityList {
+  position: absolute;
+  padding: 20px;
+  top: 100px;
+  left: 100px;
+  background: white;
+  border-radius: 10px; }
+  .cityList li {
+    cursor: pointer; }
+
+.map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #eee; }
+
+.search {
+  padding: 10px; }
+
+.search input {
+  width: 100%;
+  height: 40px;
+  font-size: 24px; }
