--- a/src/views/User/user.scss
+++ b/src/views/User/user.scss
@@ -17,6 +17,7 @@
 		max-height: 1px;
 		width: 764px;
 	}
+
 }
 
 .refresh-button {
@@ -24,3 +25,34 @@
 	bottom: 8px;
 	right: 8px;
 }
+
+.wrapper{
+	position: relative;
+
+}
+.cityList{
+	position: absolute;
+	padding: 20px;
+	top: 100px;
+	left: 100px;
+	background: white;
+	border-radius: 10px;
+
+	li{
+		cursor: pointer;
+	}
+}
+.map{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #eee;
+}
+.search{
+	padding: 10px;
+}
+.search input{
+	width: 100%;
+	height: 40px;
+	font-size: 24px;
+}        
