--- a/src/layouts/User/user.css
+++ b/src/layouts/User/user.css
@@ -196,3 +196,6 @@
     .user__navbar .main-panel .navbar-default {
       background-color: #f9f9f9;
       border-bottom: 1px solid rgba(191, 191, 191, 0.4); }
+
+.list-group-item.selected {
+  background: #bfbfbf; }
